[tool.poetry]
name = "fbarhelper"
version = "0.1.0"
description = ""
authors = ["Joseph <21023218+jbettenh@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/jbettenh/fbarhelper"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
isort = "^5.10.1"
black = "^22.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
transform = "fbarhelper.transform:main"